--- a/about.html
+++ b/about.html
@@ -4,18 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kaitlyn-Build a website</title>
+  <title>Stuff you should know about podcast</title>
 </head>
 <body>
   <!-- Include the tag for introductory content -->
-
+<header role="banner">
     <!-- Display sysk logo nested in an anchor tag to link to index.html -->
-    <img scr="images/sysk-logo.webp" alt="logo for podcast"/>
-  
+   <a href="index.html"><img src="images/sysk-logo.webp" alt="logo for podcast"/></a>
+  </header>
     <!-- Write the markup for a navigation and link items to appropriate pages -->
+    
     <ul>
-    <li>About</li>
-    <li>Episodes</li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="episodes/episodes.html">Episodes</a></li>
     </ul>
 
 
@@ -24,10 +25,11 @@
   <!-- Add an element that represents the main content of the page --> 
 
     <!-- Include a tag that groups the 'About' content -->
-
+<nav role="about" id="About">
       <!-- Section / Main heading for the page -->
       <header role-"banner">
       <h1>About Stuff You Should Know Podcast</h1>
+      </nav>
 <section>
       <p>Josh Clark and Chuck Bryant are the hosts of Stuff You Should Know, the research-based, award-winning general knowledge podcast loved around the world. Since 2008, the pair have produced more than 1500 episodes and SYSK was the first podcast to hit 500 million downloads on Apple Podcasts as well as the first to reach a billion downloads globally, and is closing in on its second billion.</p>
       
@@ -38,12 +40,12 @@
 
 
     <!-- Include a tag that groups the 'Hosts' content -->
-<section>
+<section id="about the hosts">
       <!-- Section heading -->
       <h1>The hosts</h1>
 
       <!-- Display image of hosts Josh and Chuck -->
-
+<img src="images/josh-chuck.jpeg" alt="image of hosts"/>
       <!-- Section sub-heading -->
       <h2>Josh Clark</h2>
 
