--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <!-- Include the tag for introductory content -->
+  <html>
 <header role="banner">
     <!-- Display sysk logo nested in an anchor tag to link to index.html -->
    <a href="index.html"><img src="images/sysk-logo.webp" alt="logo for podcast"/></a>
