--- a/episodes/episodes.html
+++ b/episodes/episodes.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Include the tag for introductory content -->
-
+<html>
     <!-- Display sysk logo nested in an anchor tag to link to index.html -->
     <header role="banner">
 
