--- a/episodes/fake-towns.html
+++ b/episodes/fake-towns.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Include the tag for introductory content -->
-
+<html>
     <!-- Display sysk logo nested in an anchor tag to link to index.html -->
     <a href="index.html">
       <img src="/images/sysk-logo.webp" alt="logo for podcast"/>
@@ -16,7 +16,7 @@
   
     <ul>
       <li><a href="about.html">About</a></li>
-      <li><a href="episodes/episodes.html">Episodes</a></li>
+      <li><a href="episodes.html">Episodes</a></li>
       </ul>
 
   <!-- Add an element that represents the main content of the page --> 
