--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Include the tag for introductory content -->
-
+<html>
     <!-- Display stuff you should know logo nested in an anchor tag to link to index.html -->
     <a href="index.html"><img src="images/sysk-logo.webp" alt="logo for podcast"/></a>
     <!-- Write the markup for a navigation and link items to appropriate pages -->
